lightly refactored css, fixed the bottom gap on index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
     background-image: url("../images/dust_scratches.png");
 }
 
-#wrapper {
+.wrapper {
     height: auto;
     margin: 0 auto -100px; 
     min-height: 100%;
@@ -17,9 +17,14 @@ body {
     overflow: auto;
 }
 
+.wrapper_about-fix {
+    padding: 0 0 20px;
+}
+
+
 /* Page navigation */
 
-#navbar {
+.navbar {
     background-color: #fff;
     border-bottom: 2px solid #cccccc;
     text-align: right;
@@ -28,13 +33,13 @@ body {
     width: 100%;
 }
 
-#navbar-content {
+.navbar-content {
     width: 960px;
     height: 90px;
     margin: 0px auto;
 }
 
-#name {
+.name {
     width: 20%;
     height: 70px;
     background-color: #4aaaa5;
@@ -78,10 +83,10 @@ a:visited {
 
 /* Main page content display panel */
 
-#page-content {
-    margin: 40px auto 40px auto;
+.page-content {
+    margin: 40px auto 0 auto;
     width: 960px;
-    display: block;
+    /* display: block; */
 }
 
 .subhead {
@@ -89,18 +94,18 @@ a:visited {
     color: #4aaaa5;
 }
 
-#main-content > hr {
+.main-content > hr {
     color: #dddddd;
     background-color: #dddddd;
     height: 3px;
     border: 0;
 }
 
-#main-content {
+.main-content {
     border: 1px solid #dddddd;
     background-color: white;
     width: 590px;
-    padding: 15px 30px 20px 30px; /* adjust bottom padding - prob only want to change whitespace with specific margins*/
+    padding: 15px 30px 10px 30px;
     float: left;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
@@ -204,20 +209,21 @@ h3.subhead {
     font-size: 21px;
 }
 
-#connect-social > hr {
+.connect-social > hr {
     color: #dddddd;
     background-color: #dddddd;
     height: 2px;
     border: 0;
 }
 
-#connect-social {
+.connect-social {
     width: 198px;
     background-color: white;
     border: 1px solid #dddddd;
     float: left;
     padding: 10px 30px 20px 30px;
     margin-left: 45px;
+    margin-bottom: 0;
 }
 
 span.icon {
@@ -244,7 +250,7 @@ span.icon:hover {
     text-align: center;
 }
 
-span#linkedin {
+span.linkedin {
     margin-left: 4px;
 }
 
